commented out paragraph on section three h3 tag and fixed margin spacing

--- a/portfolio/assets/css/main.css
+++ b/portfolio/assets/css/main.css
@@ -155,6 +155,7 @@ input, select, textarea {
 	h3 {
 		font-size: 1.75em;
 		line-height: 1.5em;
+		margin-bottom: 5rem;
 	}
 
 	h4 {
